tests/valid/lifetime/hrt_direct_call_unchanged.facet
fn id<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
    r
}

fn caller<'x>(r: unrestricted &'x unrestricted isize) -> unrestricted &'x unrestricted isize {
    (id r)
}
