tests/invalid/borrow_error/unrestricted_mut_ref_param.facet
fn bad(r: unrestricted &mut unrestricted isize) -> unrestricted isize {
    (*r)
}
